# cdump

./: CHANGELOG.md  Cargo.toml  README.md
crates/cdump/: Cargo.toml
crates/cdump/src/: internal.rs  lib.rs
crates/macro/: Cargo.toml
crates/macro/src/: cdebug.rs  field_analysis.rs  helpers.rs  lib.rs
crates/tests/: Cargo.toml
crates/tests/src/: lib.rs
crates/tests/tests/: array.rs  cdebug.rs  cstring.rs  cstring_array.rs  deep.rs  deep_const.rs  deserialize_ref.rs  deserialize_to.rs  dynamic.rs  issues_notr_0.rs  issues_notr_1.rs  shallow.rs
docs/features/: array.md  cdebug.md  cstring.md  cstring_array.md  deep.md  dynamic.md  shallow.md
